Fixed dial wrapping.

--- a/laravel/resources/assets/less/app.less
+++ b/laravel/resources/assets/less/app.less
@@ -1486,8 +1486,8 @@ LG = Large devices Desktops (≥1200px)
 #div1, #div2, #div3, #div4, #div5, #div6, #div7 {
     box-sizing: border-box;
     float: left;
-    height: 115px;
-    width: 115px;
+    height: 114px;
+    width: 114px;
 }
 
 #div1 {
